2012-05-07 - Add Catalyst helper, update pod