@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution Catalyst-Model-PayPal-API,
-version 0.3:
+version 0.31:
 
   A Catalyst Model for PayPal via Business::PayPal::API
 
