@@ -1,0 +1,14 @@
+requires "Business::PayPal::API" => "0";
+requires "Catalyst::Model" => "0";
+
+on 'build' => sub {
+  requires "Module::Build" => "0.3601";
+};
+
+on 'test' => sub {
+  requires "Test::More" => "0";
+};
+
+on 'configure' => sub {
+  requires "Module::Build" => "0.3601";
+};
