@@ -1,1 +1,2 @@
+2012-06-04 - Dist::Zilla changes
 2012-05-07 - Add Catalyst helper, update pod
